# apisec-scan-cicd-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: apisec-latest-fetch.yml  apisec-scan.yml  latest-fetch-tests.yml  scanner-tests.yml
app/: main.py  models.py
cicd-latest-fetch/: .dockerignore  CHANGES.md  Dockerfile  main.py  models.py  pyproject.toml  scanner.py  table.py  utils.py
cicd-latest-fetch/tests/: run_e2e.sh  test_robustness.py
cicd-latest-fetch/tests/certs/: cert.pem  key.pem
cicd-scanner/: CHANGES.md  Dockerfile  colors.py  main.py  models.py  pyproject.toml  scanner.py  table.py  utils.py
cicd-scanner/tests/: mock_server.py  test_robustness.py
oas/: minimal.yaml
tests/: test_api.py
