[tool.poetry]
name = "apisec-cicd-baseimage"
version = "5.1.2.1"
description = ""
authors = ["Mohsin Niyazi <mohsin@apisec.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
